# web-codecs-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pr.yml  release.yml
src/: error.rs  frame.rs  lib.rs
src/audio/: mod.rs
src/video/: color.rs  decoder.rs  frame.rs  mod.rs
