[package]
name = "web-codecs"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

thiserror = "1"
js-sys = "0.3.69"
tokio = { version = "1", features = ["sync", "macros"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
	"VideoDecoder",
	"VideoDecoderInit",
	"VideoDecoderConfig",
	"VideoFrame",
	"VideoColorSpace",
	"VideoColorSpaceInit",
	"EncodedVideoChunk",
	"EncodedVideoChunkInit",
	"EncodedVideoChunkType",
	"HardwareAcceleration",
	"VideoMatrixCoefficients",
	"VideoColorPrimaries",
	"VideoTransferCharacteristics",
]
